--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,13 @@
 
 
                         <div class="main-info__right">
-                            <a href="#" class="main-info__search-icon">
+                            <button  class="main-info__search-icon">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <circle cx="9" cy="9" r="7" stroke="#6c2eb7" stroke-width="2" />
                                     <line x1="15" y1="15" x2="11.5" y2="11.5" stroke="#6c2eb7" stroke-width="2"
                                         stroke-linecap="round" />
                                 </svg>
-                            </a>
+                            </button>
                         </div>
                     </nav>
 
