--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <script src="../js/burger/burger-menu.js" defer type="module"></script>
     <script src="../main-js/stogare.js" defer type="module"></script>
+    <script src="../main-js/addTodo-creater.js" defer type="module"></script>
     <title>TZ | Задачи</title>
 </head>
 
@@ -65,6 +66,7 @@
                             
                         </div>
                         <button class="btn-main__creater" data-create-btn></button>
+                        <button class="btn-main__deleter-all" data-delete-all-btn></button>
                     </div>
                 </div>
             </aside>
