update a task list and with a focus on the next stage

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                         <div class="main-info__bottom">
 
                             <button class="btn-main__creater" data-create-btn>✚</button>
-                            <button class="btn-main__deleter-all" data-delete-all-btn>удалить всё</button>
+                            <button class="btn-main__deleter-all" data-delete-all-btn>удалить все задачи</button>
 
                         </div>
 
@@ -90,7 +90,7 @@
 
             <!-- Правая часть -->
             <div class="main--content-right" data-right-menu>
-                <!-- сюда можно выводить инфо, ошибки и т.д. -->
+
             </div>
         </div>
     </main>
