--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,7 @@
         </nav>
 
         <a href="#" class="header__logo" aria-label="Лого">
-            <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
-                <circle cx="16" cy="16" r="14" fill="#fff" stroke="black" stroke-width="5" />
-                <text x="16" y="21" text-anchor="middle" font-size="14" fill="black" font-family="Arial"
-                    font-weight="bold">TZ</text>
-            </svg>
+            <h1 class="Logo__Header">TZ-LIST</h1>
         </a>
 
         <button class="theme-toggle" aria-label="Сменить тему">Сменить тему</button>
@@ -50,7 +46,7 @@
 
                         <div class="main-info__bottom">
 
-                            <button class="btn-main__creater" data-create-btn>✚</button>
+                            <button class="btn-main__creater" data-create-btn style="color: rgb(249, 229, 5);">✚</button>
                             <button class="btn-main__deleter-all" data-delete-all-btn>удалить все задачи</button>
 
                         </div>
@@ -66,7 +62,7 @@
 
             <!-- Правая часть -->
             <div class="main--content-right" data-right-menu>
-
+                    
             </div>
         </div>
     </main>
